@@ -9,7 +9,9 @@
           Added geo:lat, geo:long and RSS link attributes to items in 
             category/locale listings to facilitate integration with mapping
             applications.
-        Reorder navigation bar to provide more logical groupings.
+          Added owl:sameAs property to RDF output for nodes that are redirects
+            to other nodes.
+	Reorder navigation bar to provide more logical groupings.
         Add "format=plain" option for all-nodes index listing and associated
           template plain_index.tt.
         New message to appear on pages when you have been redirected
